# calculator

./: CMakeLists.txt  calculator.cpp  main.cpp  makefile
patches/: 0001-fix-truncation-error.patch  0002-formatting-use-tabs-instead-of-spaces.patch
